--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": "^7.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "JanKovacs\PhpAppConfig\\": "/src"
+        }
+    }
 }
